--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
     <script type="text/javascript" src="js/wnv.js"></script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <style>
     #google_translate_element {
     display: none;
@@ -54,39 +55,42 @@
                 </div>
 
                 <!-- Navigation -->
-                <div class="site-nav">
-                    <!-- Main menu -->
-                    <ul id="nav" class="site-main-menu">
-                        <li>
-                            <a class="pt-trigger" href="#home">Início</a>
-                        </li>
-                        <li>
-                            <a class="pt-trigger" href="#resume">Currículo</a>
-                            <!--index.html#resume-->
-                        </li>
-                        <li>
-                            <a class="pt-trigger" href="#services">Serviços</a>
-                            <!--index.html#services-->
-                        </li>
-                        <li>
-                            <a class="pt-trigger" href="#portfolio">Portfólio</a>
-                            <!--index.html#portfolio-->
-                        </li>
-                        <li>
-                             <li style="padding: 0px; margin-left: 0px; margin-right: 0px;">
-                                <a href="javascript:trocarIdioma('pt')" title="Traduzir para portugu&ecirc;s"><img width="16px" height="16px" src="images/idioma/brasil-1.png" /></a>
-                            </li>
-                            <li style="padding: 0px; margin-left: 0px; margin-right: 0px;">
-                                <a href="javascript:trocarIdioma('en')" title="Translate to English"><img width="16px" height="16px" src="images/idioma/usa.jpg" /></a>
-                            </li>
-                            <li style="padding: 0px; margin-left: 0px; margin-right: 0px;">
-                                <a href="javascript:trocarIdioma('it')" title="Traduci in italiano"><img width="16px" height="16px" src="images/idioma/it.png" /></a>
-                            </li>
-                        </li>
-                    </ul>
-                    <!-- /Main menu -->
-                </div>
-                <!-- Navigation -->
+<div class="site-nav">
+    <!-- Main menu -->
+    <ul id="nav" class="site-main-menu">
+        <li>
+            <a class="pt-trigger" href="#home">Início</a>
+        </li>
+        <li>
+            <a class="pt-trigger" href="#resume">Currículo</a>
+        </li>
+        <li>
+            <a class="pt-trigger" href="#services">Serviços</a>
+        </li>
+        <li>
+            <a class="pt-trigger" href="#portfolio">Portfólio</a>
+        </li>
+        <!-- Language selection -->
+        <li style="padding: 0px; margin-left: 0px; margin-right: 0px;">
+            <a href="javascript:trocarIdioma('pt')" title="Traduzir para português">
+                <img width="16px" height="16px" src="images/idioma/brasil-1.png" alt="Português" />
+            </a>
+        </li>
+        <li style="padding: 0px; margin-left: 0px; margin-right: 0px;">
+            <a href="javascript:trocarIdioma('en')" title="Translate to English">
+                <img width="16px" height="16px" src="images/idioma/usa.jpg" alt="English" />
+            </a>
+        </li>
+        <li style="padding: 0px; margin-left: 0px; margin-right: 0px;">
+            <a href="javascript:trocarIdioma('it')" title="Traduci in italiano">
+                <img width="16px" height="16px" src="images/idioma/it.png" alt="Italiano" />
+            </a>
+        </li>
+    </ul>
+    <!-- /Main menu -->
+</div>
+<!-- Navigation -->
+
             </div>
         </header>
         <!-- /Header -->
@@ -374,6 +378,42 @@
                                                     <p class="item-description">Formação JavaScript e TypeScript.</p>
                                                 </div>
                                                 <!-- / Education 16 -->
+
+                                                <!-- Education 17 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2024</span>
+                                                    <span class="item-small">Udemy</span>
+                                                    <p class="item-description">Auze Boards: Gerenciamento de projetos com Azure DevOps.</p>
+                                                </div>
+                                                <!-- / Education 17 -->
+
+                                                <!-- Education 18 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2024</span>
+                                                    <span class="item-small">TDC Business</span>
+                                                    <p class="item-description">Design de código.</p>
+                                                </div>
+                                                <!-- / Education 18 -->
+
+                                                <!-- Education 19 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2024</span>
+                                                    <span class="item-small">TDC Business</span>
+                                                    <p class="item-description">Liderança Técnica.</p>
+                                                </div>
+                                                <!-- / Education 19 -->
+
+                                                <!-- Education 20 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2024</span>
+                                                    <span class="item-small">TDC Business</span>
+                                                    <p class="item-description">Managent 3.0 e Gestão Ágil.</p>
+                                                </div>
+                                                <!-- / Education 20 -->
                                             </div>
                                         </div>
                                     </div>
@@ -416,71 +456,7 @@
                                     </div>
                                 </div>
 
-                                <!--   <div class="row"> 
-                                    <div class="col-sm-6 col-md-6 col-lg-6">
-                                        <div class="block">
-                                            <div class="block-title">
-                                                <h3>Design <span>Skills</span></h3>
-                                            </div>
-
-                                            <div class="skills-info">
-                                                <h4>Web Design</h4>
-                                                <div class="skill-container">
-                                                    <div class="skill-percentage skill-1"></div>
-                                                </div>
-
-                                                <h4>Graphic Design</h4>
-                                                <div class="skill-container">
-                                                    <div class="skill-percentage skill-2"></div>
-                                                </div>
-
-                                                <h4>Print Design</h4>
-                                                <div class="skill-container">
-                                                    <div class="skill-percentage skill-3"></div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-
-                                    <div class="col-sm-6 col-md-6 col-lg-6">
-                                        <div class="block">
-                                            <div class="block-title">
-                                                <h3>Coding <span>Skills</span></h3>
-                                            </div>
-
-                                            <div class="skills-info">
-                                                <h4>HTML5</h4>
-                                                <div class="skill-container">
-                                                    <div class="skill-percentage skill-4"></div>
-                                                </div>
-
-                                                <h4>CSS3/LESS/SASS</h4>
-                                                <div class="skill-container">
-                                                    <div class="skill-percentage skill-5"></div>
-                                                </div>
-
-                                                <h4>jQuery</h4>
-                                                <div class="skill-container">
-                                                    <div class="skill-percentage skill-6"></div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </div> -->
-
-                                <!-- Download Resume Button 
-                                <div class="row">
-                                    <div class="col-sm-12 col-md-12 col-lg-12">
-                                        <div class="block">
-                                            <div class="center download-resume">
-                                                <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                 End of Download Resume Button -->
+                                
 
                             </div>
                         </div>
@@ -925,6 +901,58 @@
                                         </figure>
                                         <!-- /Portfolio Item 17 -->
 
+                                        <!-- Portfolio Item 18 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/18.jpeg" class="lightbox" title="Auze Boards: Gerenciamento de projetos com Azure DevOps">
+                                                <img src="images/portfolio/18.jpeg" alt="">
+                                                <div>
+                                                    <h5 class="name">Auze Boards: Gerenciamento de projetos com Azure DevOps</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 18 -->
+
+                                        <!-- Portfolio Item 19 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/19.jpeg" class="lightbox" title="Design de código">
+                                                <img src="images/portfolio/19.jpeg" alt="">
+                                                <div>
+                                                    <h5 class="name">Design de código</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 19 -->
+
+                                        <!-- Portfolio Item 21 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/21.jpeg" class="lightbox" title="Liderança Técnica">
+                                                <img src="images/portfolio/21.jpeg" alt="">
+                                                <div>
+                                                    <h5 class="name">Liderança técnica</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 21 -->
+
+                                        <!-- Portfolio Item 22 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/22.jpeg" class="lightbox" title="Managent 3.0 e Gestão Ágil">
+                                                <img src="images/portfolio/22.jpeg" alt="">
+                                                <div>
+                                                    <h5 class="name">Managent 3.0 e Gestão Ágil</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 22 -->
+
                                         <!-- Portfolio Item 11 -->
                                         <figure class="item" data-groups='["recomendacoes"]'>
                                             <a href="images/portfolio/10.jpg" class="lightbox" title="Hotel Rinkão">
@@ -982,7 +1010,6 @@
     <script type="text/javascript" src="js/jquery.googlemap.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/tradutor.js"></script>
-    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 
 </html>
