--- a/geagro/index.html
+++ b/geagro/index.html
@@ -19,7 +19,9 @@
         </section>
 
         <section class="output-section">
-            <h2>Dados dos Registros:</h2>
+            <div style="display: inline;">
+                <h2 style="display: inline;">Informações do registro SPED:</h2>
+                <div Id="outdados" style="display: inline;"></div></div>
             <div id="output"></div> <!-- Div para exibir múltiplos registros -->
         </section>
     </div>
