--- a/Eventos/MuOnline.html
+++ b/Eventos/MuOnline.html
@@ -6,7 +6,7 @@
     <link href="eventos.css" rel="stylesheet" type="text/css" />
     <script language="javascript" src="eventos.js" type="text/javascript"></script>
 	</head>
-	<body>
+	<body  dir="ltr" unselectable="on" scroll="no" onload="loadMain()">
 		<section class="game-section">
 			<h2>Eventos</h2>
 			<div class="evento-container">
