--- a/Eventos/MuOnline.html
+++ b/Eventos/MuOnline.html
@@ -11,19 +11,22 @@
 			<h2>Eventos</h2>
 			<div class="evento-container">
 				<div class="evento">
-					<div class="titulo_evento" id="DS">
+					<div class="titulo_evento">
+						<img src="images/DS.webp" alt="Devil Square" />
 						<span>Devil Square</span>
 					</div>
 					<div class="descricao_evento" id="tempoDS"></div>
 				</div>
 				<div class="evento">
-					<div class="titulo_evento" id="BC">
+					<div class="titulo_evento">
+						<img src="images/BC.webp" alt="Blood Castle" />
 						<span>Blood Castle</span>
 					</div>
 					<div class="descricao_evento" id="tempoBC"></div>
 				</div>
 				<div class="evento">
-					<div class="titulo_evento" id="CC">
+					<div class="titulo_evento">
+						<img src="images/CC.webp" alt="Chaos Castle" />
 						<span>Chaos Castle</span>
 					</div>
 					<div class="descricao_evento" id="tempoCC"></div>
