--- a/financeiro/index.html
+++ b/financeiro/index.html
@@ -12,7 +12,7 @@
 <body class="login-body">
   <main class="card card--auth">
     <h1>Contas a Pagar / Receber</h1>
-    <p class="muted">Faça login com seu CPF e senha. Os dados ficam em um arquivo CSV nomeado pelo CPF.</p>
+    <p class="muted">Faça login com seu CPF e senha.</p>
 
     <form id="loginForm">
       <label>CPF
@@ -28,7 +28,7 @@
       </div>
 
       <div class="row">
-        <button type="button" id="btnDefinirPasta" class="btn btn--ghost">Definir/Alterar pasta de dados…</button>
+        <button type="button" id="btnDefinirPasta" class="btn btn--ghost" hidden>Definir/Alterar pasta de dados…</button>
       </div>
     </form>
 
